--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ install = "*"
 dj-rest-auth = "*"
 django-allauth = "*"
 djangorestframework-simplejwt = "*"
+django-cors-headers = "*"
 
 [dev-packages]
 black = "*"
