--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ dj-rest-auth = "*"
 django-allauth = "*"
 djangorestframework-simplejwt = "*"
 django-cors-headers = "*"
+psycopg2 = "*"
 
 [dev-packages]
 black = "*"
