--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ django-allauth = "*"
 djangorestframework-simplejwt = "*"
 django-cors-headers = "*"
 psycopg2 = "*"
+django-filter = "*"
 
 [dev-packages]
 black = "*"
