--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.21.2",
+    "bulma": "^0.9.3",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0",
+    "vue": "^3.2.27",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
