--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ djangorestframework-simplejwt = "*"
 django-cors-headers = "*"
 psycopg2 = "*"
 django-filter = "*"
+gunicorn = "*"
 
 [dev-packages]
 black = "*"
