--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -3,6 +3,10 @@ version: "3.9"
 services:
   db:
     image: postgres
+    environment:
+      - POSTGRES_DB=min-helper
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
   web:
