--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,4 +3,4 @@ WORKDIR /code
 COPY frontend/package.json /code/
 RUN npm install
 RUN npm install -g @vue/cli
-COPY . /code/
+COPY ./frontend /code/
