--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "bulma": "^0.9.3",
+    "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.6.5",
     "vue": "^3.2.27",
     "vue-router": "^4.0.0-0",
