--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -1,29 +1,27 @@
-version: "3.9"
+version: '3'
 
 services:
+  web:
+    build: .
+    container_name: min-helper_web
+    command: "gunicorn --chdir backend --workers=2 --bind=0.0.0.0:8000 config.wsgi:application"
+    # command: python backend/manage.py runserver 0.0.0.0:8000
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
   db:
-    image: postgres
+    image: "postgres:latest"
+    container_name: min-helper_db
     environment:
       - POSTGRES_DB=min-helper
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
-  web:
-    build:
-      dockerfile: backend/Dockerfile
-    command: python backend/manage.py runserver 0.0.0.0:8000
-    volumes:
-      - .:/code
-    ports:
-      - "8000:8000"
-    depends_on:
-      - db
   vue:
     build:
       dockerfile: frontend/Dockerfile
-    volumes:
-      - .:/code
     ports:
       - "8080:8080"
     depends_on:
