--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ black==21.12b0
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
-click==8.0.3
+click==8.0.4
 colorama==0.4.4
 cryptography==36.0.1
 defusedxml==0.7.1
@@ -14,7 +14,10 @@ django-cors-headers==3.11.0
 django-filter==21.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.1.0
+gevent==21.12.0
+greenlet==1.1.2
 gunicorn==20.1.0
+h11==0.13.0
 idna==3.3
 install==1.3.5
 mypy-extensions==0.4.3
@@ -22,7 +25,6 @@ oauthlib==3.2.0
 pathspec==0.9.0
 platformdirs==2.4.1
 psycopg2==2.9.3
-psycopg2-binary==2.9.3
 pycparser==2.21
 PyJWT==2.3.0
 python-dotenv==0.19.2
@@ -35,3 +37,6 @@ tomli==1.2.3
 typing_extensions==4.0.1
 tzdata==2021.5
 urllib3==1.26.8
+whitenoise==6.0.0
+zope.event==4.5.0
+zope.interface==5.4.0
