--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,11 +7,13 @@ click==8.0.4
 colorama==0.4.4
 cryptography==36.0.1
 defusedxml==0.7.1
+dj-database-url==0.5.0
 dj-rest-auth==2.2.3
 Django==4.0.3
 django-allauth==0.49.0
 django-cors-headers==3.11.0
 django-filter==21.1
+django-heroku==0.3.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.1.0
 gevent==21.12.0
@@ -25,6 +27,7 @@ oauthlib==3.2.0
 pathspec==0.9.0
 platformdirs==2.4.1
 psycopg2==2.9.3
+psycopg2-binary==2.9.3
 pycparser==2.21
 PyJWT==2.3.0
 python-dotenv==0.19.2
