--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,13 @@
+asgiref==3.5.0
+black==21.12b0
+certifi==2021.10.8
 cffi==1.15.0
+charset-normalizer==2.0.12
+click==8.0.4
+colorama==0.4.4
+cryptography==36.0.1
+defusedxml==0.7.1
+dj-database-url==0.5.0
 dj-rest-auth==2.2.3
 Django==4.0.3
 django-allauth==0.49.0
@@ -8,12 +17,29 @@ django-heroku==0.3.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.1.0
 gevent==21.12.0
+greenlet==1.1.2
 gunicorn==20.1.0
+h11==0.13.0
+idna==3.3
+install==1.3.5
+mypy-extensions==0.4.3
+oauthlib==3.2.0
+pathspec==0.9.0
+platformdirs==2.4.1
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
+pycparser==2.21
 PyJWT==2.3.0
 python-dotenv==0.19.2
+python3-openid==3.2.0
+pytz==2021.3
 requests==2.27.1
+requests-oauthlib==1.3.1
+sqlparse==0.4.2
+tomli==1.2.3
+typing_extensions==4.0.1
+tzdata==2021.5
 urllib3==1.26.8
 whitenoise==6.0.0
-
+zope.event==4.5.0
+zope.interface==5.4.0
